K1J-447: Fixed integration test for available for patient (#335)